Fix layer-config-header and layer-config-row alignment to match. Create function to accomodate labeling the config rows for better clarity

--- a/static/style.css
+++ b/static/style.css
@@ -107,7 +107,8 @@ body {
     padding: 2px;
 }
 
-.layer-config-row .layer-config-header {
+.layer-config-row,
+.layer-config-header {
     display: grid;
     grid-template-columns: 15% 35% 35% 15%;
 }
